--- a/VFComm/VFCore/VFCore.vcxproj.filters
+++ b/VFComm/VFCore/VFCore.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClInclude Include="VFMapEx.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VFQueue.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
